--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "sudo next dev -p 80",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.7.1",
+    "axios": "^1.2.1",
+    "crypto": "^1.0.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +22,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "prisma": "^4.7.1",
     "typescript": "4.9.4"
   }
 }
